<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.gavrilin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.gavrilin.mireaproject.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.gavrilin.mireaproject.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.gavrilin.mireaproject.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.gavrilin.mireaproject.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.gavrilin.mireaproject.ui.sensor.SensorFragment"
        android:label="@string/menu_sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_recorder"
        android:name="ru.mirea.gavrilin.mireaproject.ui.soundrecorder.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ru.mirea.gavrilin.mireaproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_story"
        android:name="ru.mirea.gavrilin.mireaproject.ui.stories.StoryFragment"
        android:label="@string/menu_story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/nav_parser"
        android:name="ru.mirea.gavrilin.mireaproject.ui.webparser.WebParserFragment"
        android:label="@string/menu_parser"
        tools:layout="@layout/fragment_web_parser" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.gavrilin.mireaproject.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>